# Search-Engine

./: .gitignore  .gitmodules  README.md
backend/: CMakeLists.txt  compile_commands.json  crawler.cpp  main.cpp
backend/crawler/: CMakeLists.txt  UrlHelper.cpp  UrlHelper.h  indexer.cpp  indexer.h  main.cpp  psl.txt  renderJS.cpp  renderJS.h
backend/fun/: CMakeLists.txt  bot.cpp  bot.h  contexto.cpp
backend/server/: CMakeLists.txt  example.tpl  main.cpp
backend/server/templates/: searchItem.tpl  searchPage.tpl
frontend/: index.css  index.html  index.js  searchPage.css
frontend/fun/: guessElement.js  index.css  index.html  index.js
